feat: add button component

--- a/crates/ltk-manager/src/styles/app.css
+++ b/crates/ltk-manager/src/styles/app.css
@@ -102,6 +102,10 @@ body {
   min-height: 100vh;
 }
 
+.root {
+  isolation: isolate;
+}
+
 /* Custom scrollbar */
 ::-webkit-scrollbar {
   width: 8px;
